[package]
name = "infra-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
os_pipe = "1.0.0"
duct = "0.13.5"
custom_error = "1.7"
lazy_static = "1.4"
regex = "1.5"